--- a/610 Project/PasswordGenerator/PasswordGenerator/PasswordGenerator.csproj
+++ b/610 Project/PasswordGenerator/PasswordGenerator/PasswordGenerator.csproj
@@ -75,12 +75,21 @@
     <Compile Include="PasswordProduction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="SetOfActions.cs" />
     <Compile Include="SetOfSymbols.cs" />
     <Compile Include="Vigenere.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
